--- a/templates/member/actions.html
+++ b/templates/member/actions.html
@@ -19,22 +19,22 @@
         <h2>Actions</h2>
         <ul>
             <li>
-                <a href="{% url "lbp.member.views.details" user.username %}">
+                <a href="{% url "zds.member.views.details" user.username %}">
                     Voir votre profil
                 </a>
             </li>
             <li>
-                <a href="{% url "lbp.member.views.publications" %}">
+                <a href="{% url "zds.member.views.publications" %}">
                     Voir vos publications
                 </a>
             </li>
             <li>
-                <a href="{% url "lbp.member.views.settings_profile" %}">
+                <a href="{% url "zds.member.views.settings_profile" %}">
                     Paramètres de votre profil
                 </a>
             </li>
             <li>
-                <a href="{% url "lbp.member.views.settings_account" %}">
+                <a href="{% url "zds.member.views.settings_account" %}">
                     Paramètres de votre compte
                 </a>
             </li>
