--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -113,7 +113,7 @@
 
 <div class="row">
 {% for post in posts %}
-<div class="post {% if forloop.first and nb > 1 %}before{% endif %} {% if post.is_useful %}useful{% endif %}">
+<div class="post {% if forloop.first and nb > 1 %}before{% endif %} {% if post.is_useful %}useful{% endif %} {% if perms.forum.change_topic and post.alerts.all.count > 0 %} alert-box {% endif %}">
         <div class="large-12 columns post-head" id="p{{ post.id }}">
             <div class="large-2 columns post-nickname">
                 <p>
@@ -123,8 +123,26 @@
                 </p>
             </div>
             <div class="large-10 columns">
+                <div class="left">
+                <p>
+                    <a href="#p{{ post.pk }}">#</a>
+                    {{ post.pubdate|humane_date }}
+                    {% if not post.update = None %}
+                        (dernière édition {{ post.update|humane_date }})
+                    {% endif %}
+                    {% if forloop.first and nb > 1 %}
+                        &ndash; page précédente
+                    {% endif %}
+                    {% if not post.is_visible %}
+                        : <i>{{ post.text_hidden }}</i>
+                    {% endif %}
+                </p>
+                </div>
+                <form  action="{% url "zds.forum.views.edit_post" %}?message={{post.pk}}" method="POST">
+                {% if post.is_visible %}
                 <div class="right">
                     {% if user.is_authenticated %}
+                        
                         <div class="button-group">
                             {% if topic.author == user and post.author != user %}
                                 <a href="/forums/message/utile?message={{ post.pk }}" class="button small {% if not post.is_useful %}secondary{% else %}success{% endif %}">
@@ -133,11 +151,40 @@
                                 </a>
                             {% endif %}
 
-                            {% if post.author == user or perms.forum.change_post %}
+                            {% if post.author == user or perms.post.change_post %}
                                 <a href="/forums/message/editer?message={{ post.pk }}" class="button secondary small">
                                     <i class="fi-pencil"></i>
                                     Éditer
                                 </a>
+                                {% if not post == post.topic.first_post %}
+                                <a href="#" class="button secondary small" data-dropdown="delete-drop-{{post.pk}}">
+                                    Masquer
+                                </a>
+                                {% endif %}
+                                <div id="delete-drop-{{post.pk}}" class="f-dropdown small content" data-dropdown-content>
+                                    <p>
+                                        Êtes vous certains de vouloir masquer ce message ? cette action est irreversible pour les simples membres
+                                    </p>
+                                    {% if perms.post.change_post %}
+                                    <input type="text" name="text_hidden" class="expand" placeholder="Message de masquage" />
+                                    {% endif %}
+                                    <button type="submit" name="delete-post" class="button expand alert">
+                                        Confirmer
+                                    </button>
+                                </div>
+                            {% else %}
+                                <a href="#" class="button secondary small" data-dropdown="signal-drop-{{post.pk}}">
+                                    Signaler
+                                </a>
+                                <div id="signal-drop-{{post.pk}}" class="f-dropdown small content" data-dropdown-content>
+                                    <p>
+                                        Pour quelle raison signalez vous ce message ?
+                                    </p>
+                                    <input type="text" name="signal-text" class="expand" placeholder="Flood, Troll, Hors sujet, ..." />
+                                    <button type="submit" name="signal-post" class="button expand alert">
+                                        Confirmer le signalement
+                                    </button>
+                                </div>
                             {% endif %}
 
                             {% if not topic.is_locked and not topic.antispam %}
@@ -150,22 +197,33 @@
                         </div>
                     {% endif %}
                 </div>
-                <p>
-                    <a href="#p{{ post.pk }}">#</a>
-                    {{ post.pubdate|humane_date }}
-                    {% if not post.update = None %}
-                        (dernière édition {{ post.update|humane_date }})
-                    {% endif %}
-                    {% if forloop.first and nb > 1 %}
-                        &ndash; page précédente
-                    {% endif %}
-                </p>
+                {% elif perms.post.change_post %}
+                <div class="right">
+                    <a href="#" class="button secondary small" data-dropdown="show-drop-{{post.pk}}">
+                        Afficher
+                    </a>
+                    <div id="show-drop-{{post.pk}}" class="f-dropdown small content" data-dropdown-content>
+                        <p>
+                            Ce message a été masqué par un modérateur, souhaitez vous réellement l'afficher ?
+                        </p>
+                        <button type="submit" name="show-post" class="button expand alert">
+                            Confirmer
+                        </button>
+                    </div>
+                </div>
+                {% endif %}
+                {% csrf_token %}
+                </form>
             </div>
         </div>
+        {% if post.is_visible %}
         <div class="row post-content">
             <div class="large-2 columns hide-for-small post-avatar">
                 {% with profile=post.author|profile %}
                     <img src="{{ profile.get_avatar_url }}" width="80" height="80" alt="Avatar" />
+                    {% if perms.member.show_ip %}
+                    <p>{{ post.ip_address }}</p>
+                    {% endif %}
                 {% endwith %}
                 <p></p>
             </div>
@@ -189,8 +247,19 @@
                         {{profile.sign|emarkdown}}
                     {% endwith %}
                 </div>
+                {% if post.alerts.all.count > 0 and perms.forum.moderation %}
+                    <div class="row">
+                        <hr />
+                    </div>
+                    {% for alert in post.alerts.all %}
+                    <div class="row">
+                        <p><i>{{alert.pubdate|humane_date}}</i> par {{ alert.author.username }}: <strong>{{alert.text}}</strong></p>
+                    </div>
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
+        {% endif %}
     </div>
 {% endfor %}
 </div>
@@ -216,7 +285,7 @@ method="POST" id="submit_form">
     </div>
     <div class="row">
         <div class="large-8 large-centered columns" style="text-align: center;">
-            <button class="button btn-primary" type="submit" {% if topic.is_locked or topic.antispam %}disabled{% endif %}>
+            <button class="button btn-primary" type="submit" {% if topic.is_locked or topic.antispam %}disabled{% endif %} name="answer">
                 <i class="icon-reply"></i>
                 Répondre
             </button>
