--- a/templates/tutorial/view_part_common.part.html
+++ b/templates/tutorial/view_part_common.part.html
@@ -1,6 +1,7 @@
 {# Block displaying a part #}
 {% load markup %}
 {% load emarkdown %}
+{% load repo_reader %}
 
 {% with tutorial=part.tutorial%}
     {% with authors=tutorial.authors.all %}
@@ -56,8 +57,9 @@
 
             {% endif %}
 
-            {% if part.get_introduction %}
-                {{ part.get_introduction|emarkdown }}
+            {% with part_version=part|repo_part:version %}
+            {% if part_version.introduction %}
+                {{ part_version.introduction|emarkdown }}
             {% else %}
                 <p>Pas d'introduction.</p>
             {% endif %}
@@ -71,7 +73,7 @@
             <ul>
                 {% for chapter in chapters %}
                 <li>
-                    <a href="{% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}">Chapitre {{ chapter.part.position_in_tutorial }}.{{ chapter.position_in_part }} | {{ chapter.title }}</a>
+                    <a href="{% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}{%if version %}?version={{version}}{% endif %}">Chapitre {{ chapter.part.position_in_tutorial }}.{{ chapter.position_in_part }} | {{ chapter.title }}</a>
                     <ul>
                         {% for extract in chapter.get_extracts %}
                         <li>
@@ -86,12 +88,12 @@
                 {% endfor %}
             </ul>
 
-            {% if part.get_conclusion %}
-                {{ part.get_conclusion|emarkdown }}
+            {% if part_version.conclusion %}
+                {{ part_version.conclusion|emarkdown }}
             {% else %}
                 <p>Pas de conclusion.</p>
             {% endif %}
-
+            {% endwith %}
         {% endwith %}
     {% endwith %}
 {% endwith %}
