--- a/templates/home.html
+++ b/templates/home.html
@@ -68,7 +68,7 @@ Bienvenue sur ZesteDeSavoir
                                 </div>
                                 <div class="large-10 columns">
                                 <p class="subheader">
-                                <a href="{{ tutorial.get_absolute_url}}">
+                                <a href="{{ tutorial.get_absolute_url_prod }}">
                                     {{ tutorial.title }}
                                 </a>
                                 </p>
