--- a/templates/member/settings_profile.html
+++ b/templates/member/settings_profile.html
@@ -9,6 +9,7 @@
 {% block subnav %}
     <dd class="active"><a href="{% url "zds.member.views.settings_profile" %}">Profil</a></dd>
     <dd><a href="{% url "zds.member.views.settings_account" %}">Compte</a></dd>
+    <dd ><a href="{% url "zds.member.views.settings_user" %}">Pseudo/Email</a></dd>
 {% endblock %}
 
 {% block settings_form %}
