--- a/templates/tutorial/view_tutorial.html
+++ b/templates/tutorial/view_tutorial.html
@@ -145,7 +145,7 @@
             <img src="{{tutorial.image.thumb.url }}"/>
             {% endif %}
         </div>
-        <div class="large-11 columns">
+        <div class="large-6 columns">
         <p>
             Tutoriel
             {% if not tutorial.is_mini %}
@@ -163,7 +163,14 @@
                 {% include "member/member_item_common.part.html" %}
             {% endfor %}.
         </p>
-    </div>
+        </div>
+        <div class="large-5 columns">
+            <p>
+            {% for category in tutorial.category.all %}
+                <span class="label">{{ category.title }}</span>
+            {% endfor %}
+            </p>
+        </div>
     </div>
 </div>
 
