Best content support and managment

--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -16,6 +16,7 @@ textarea {
 }
 
 html {
+    min-height: 100%;
     width: 100%;
     font-size: 62.5%;
     overflow-x: hidden;
@@ -28,6 +29,7 @@ body,
     font-size: 1.4rem;
     line-height: 24px;
     line-height: 2.4rem;
+    min-height: 100%;
     width: 100%;
 }
 /*
