--- a/templates/home.html
+++ b/templates/home.html
@@ -22,14 +22,11 @@ class="active"
     débutant." />
 {% endblock %}
 
+
+
 {# Content #}
-{% block headline-sub %}
-Bienvenue sur ZesteDeSavoir
-{% endblock %}
 
-
-
-{% block content %}
+{% block content_out %}
 
     <section class="content-col">
         <h2 class="ico ico-articles">Derniers Articles</h2>
